<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.teamavsb.MainActivity"
    android:background="@android:color/holo_blue_light">

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@android:color/holo_red_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/teamA"
        android:textSize="20sp"/>
    <Button
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/plus_2"
        android:onClick="plus2A"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/plus_3"
        android:onClick="plus3A"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/minus_2"
        android:onClick="minus2A"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minus_3"
        android:textSize="15sp"
        android:onClick="minus3A"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/teamA_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teamA_score"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="20sp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_purple"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/teamB"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/plus_2"
            android:onClick="plus2B"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus_3"
            android:textSize="15sp"
            android:onClick="plus3B"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus_2"
            android:textSize="15sp"
            android:onClick="minus2B"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus_3"
            android:textSize="15sp"
            android:onClick="minus3B"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/teamB_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamB_score"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
